--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,6 @@
+== 12.03.16 (2012.03.16)
+* Forked execjslint and s/jslint/csslint/g
+
 == 0.10.0 (2012.02.08)
 
 * JSLint.run now accepts a hash of JSLINT options as an optional
